force-app/main/default/objects/QA_Master_Item__c/QA_Master_Item__c.object-meta.xml
<CustomObject>
    <description>menyimpan pilihan &apos;finding&apos;, yang related pada aspek penilaian</description>
    <label>QA Master Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Master Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Master Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>