force-app/main/default/objects/QA_Master_Item__c/fields/Aspek_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Aspek_Penilaian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aspek Penilaian</label>
    <referenceTo>QA_Master__c</referenceTo>
    <relationshipName>Aspek_Penilaian</relationshipName>
    <type>Lookup</type>
</CustomField>