force-app/main/default/objects/QA_Master_Item__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>Aspek_Penilaian__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type (QA Master)</label>
    <type>Text</type>
</CustomField>