force-app/main/default/objects/QA_Master_Item__c/fields/Section_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Section_Penilaian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Penilaian</label>
    <referenceTo>QA_Master_Detail__c</referenceTo>
    <relationshipLabel>QA Master Item</relationshipLabel>
    <relationshipName>QA_Master_Item</relationshipName>
    <type>Lookup</type>
</CustomField>