force-app/main/default/objects/QA_Master_Item__c/listViews/Master_QA_Agent_Leader.listView-meta.xml
<ListView>
    <fullName>Master_QA_Agent_Leader</fullName>
    <columns>NAME</columns>
    <columns>Aspek_Penilaian__c</columns>
    <columns>Section_Penilaian__c</columns>
    <columns>Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>contains</operation>
        <value>Agent Leader</value>
    </filters>
    <label>Master QA - Agent Leader</label>
</ListView>