force-app/main/default/objects/QA_Master_Item__c/listViews/Master_QA_RPS_BRING_LOP.listView-meta.xml
<ListView>
    <fullName>Master_QA_RPS_BRING_LOP</fullName>
    <columns>NAME</columns>
    <columns>Aspek_Penilaian__c</columns>
    <columns>Section_Penilaian__c</columns>
    <columns>Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>contains</operation>
        <value>RPS Non BRING &amp; LOP</value>
    </filters>
    <label>Master QA - RPS Non BRING &amp; LOP</label>
</ListView>