force-app/main/default/objects/QA_Master_Item__c/listViews/QA_Master_VBS.listView-meta.xml
<ListView>
    <fullName>QA_Master_VBS</fullName>
    <columns>NAME</columns>
    <columns>Aspek_Penilaian__c</columns>
    <columns>Section_Penilaian__c</columns>
    <columns>Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>contains</operation>
        <value>VBS</value>
    </filters>
    <label>QA Master - VBS</label>
</ListView>